syntax = "proto3";

option csharp_namespace = "GameTeq.TestWork.WebOutputFilesService";

package filesoutput;

service FilesOutput {
  rpc Get (FilterRequest) returns (FilesReply);
  rpc GetAll (HelloRequest) returns (FilesReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message FilterRequest {

}

// The response message containing the greetings.
message FilesReply {
  string message = 1;
}
